--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
 html,
 body {
+  max-height: 100%;
+  min-height: 100%;
+  width: 100%;
+  overflow-y: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body {
+  height: 100vh;
 }
 
 a {
